fixed the navigation header and align the text for the about me section of the portfolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,17 +11,25 @@ nav ul {
     list-style: none;
 }
 nav ul li{
-    display: incline-block;
+    display: inline-block;
     margin-left: 25px;
 }
 
 /* The side menu design */
-aside{
+aside {
     border: 4px solid black;
-    width: 40%;
+    width: 20%;
     border-right: 4px solid purple;
     min-height: 35vh;
     display: flex;
     justify-content: flex-end;
     margin: 20px;
+}
+
+p {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    top: -270px;
+    left: -350px;
 }
